--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>be.renaud11232</groupId>
     <artifactId>ghostfinder</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1.0</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
